--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body class="container py-4">
-
+<center>
   <h1 class="mb-4">Skype JSON Chat Viewer</h1>
 
   <form method="POST" enctype="multipart/form-data" onsubmit="return validateForm()">
@@ -65,6 +65,6 @@
       return true;
     }
   </script>
-
+</center>
 </body>
 </html>
